# SearchMuse

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.it.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-check.yml  docs.yml
.planning/: PROJECT.md  REQUIREMENTS.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: SUMMARY.md
config/: default.yaml
docs/: 000_index.md  index.md
docs/001_functional/: 000_README.md  001_vision-and-goals.md  002_use-cases.md  003_feature-specifications.md  004_search-refinement-algorithm.md  005_source-citation.md  006_supported-websites.md  007_llm-requirements.md  008_input-output-formats.md  009_limitations.md  010_roadmap.md
docs/002_technical/: 001_architecture.md  002_components.md  003_data-flow.md  004_api-reference.md  005_configuration-reference.md  006_development-setup.md  007_testing-strategy.md  008_deployment.md  009_security.md  010_contributing.md
docs/003_it/: 000_index.md
docs/003_it/001_functional/: 000_INDEX.md  000_README.md  001_vision-and-goals.md  002_use-cases.md  003_feature-specifications.md  004_search-refinement-algorithm.md  005_source-citation.md  006_supported-websites.md  007_llm-requirements.md  008_input-output-formats.md  009_limitations.md  010_roadmap.md
docs/003_it/002_technical/: 001_architecture.md  002_components.md  003_data-flow.md  004_api-reference.md  005_configuration-reference.md  006_development-setup.md  007_testing-strategy.md  008_deployment.md  009_security.md  010_contributing.md
site/: 404.html  index.html  sitemap.xml
site/000_index/: index.html
site/001_functional/000_README/: index.html
site/001_functional/001_vision-and-goals/: index.html
site/001_functional/002_use-cases/: index.html
site/001_functional/003_feature-specifications/: index.html
site/001_functional/004_search-refinement-algorithm/: index.html
site/001_functional/005_source-citation/: index.html
site/001_functional/006_supported-websites/: index.html
site/001_functional/007_llm-requirements/: index.html
site/001_functional/008_input-output-formats/: index.html
site/001_functional/009_limitations/: index.html
site/001_functional/010_roadmap/: index.html
site/002_technical/001_architecture/: index.html
site/002_technical/002_components/: index.html
site/002_technical/003_data-flow/: index.html
site/002_technical/004_api-reference/: index.html
site/002_technical/005_configuration-reference/: index.html
site/002_technical/006_development-setup/: index.html
site/002_technical/007_testing-strategy/: index.html
site/002_technical/008_deployment/: index.html
site/002_technical/009_security/: index.html
site/002_technical/010_contributing/: index.html
site/003_it/000_index/: index.html
site/search/: search_index.json
src/searchmuse/: __init__.py  __main__.py
src/searchmuse/adapters/: __init__.py
src/searchmuse/application/: __init__.py  progress.py  search_orchestrator.py
src/searchmuse/cli/: __init__.py  commands.py  container.py  display.py  interactive.py  ollama_commands.py
src/searchmuse/domain/: __init__.py  enums.py  errors.py  models.py  validators.py
src/searchmuse/infrastructure/: __init__.py  api_key_resolver.py  config.py  i18n.py  keyring_store.py  logging_setup.py  ollama_client.py
src/searchmuse/ports/: __init__.py  chat_repository_port.py  content_extractor_port.py  llm_port.py  result_renderer_port.py  scraper_port.py  search_port.py  source_repository_port.py
tests/: conftest.py
tests/unit/adapters/: test_base_adapter.py  test_claude_adapter.py  test_duckduckgo_search.py  test_gemini_adapter.py  test_httpx_scraper.py  test_json_renderer.py  test_llm_defaults.py  test_llm_factory.py  (+10 more)
(+65 files in other folders)
